Fix logo spacing

--- a/stylesheets/site.css
+++ b/stylesheets/site.css
@@ -689,5 +689,9 @@ div.ember-attribution{
   font-size: 120%
 }
 p.left-offset{
-  margin: 1em 0 0 55px;
+  margin: 1em 0 0 70px;
+}
+table.logos{
+  border-collapse: separate;
+  border-spacing: 12px 0;
 }
